[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Prefab/Test_Over_M.gd" type="Script" id=1]
[ext_resource path="res://Assets/Prefab/BoxContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Prefab/Detail_Theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Prefab/Main_Theme.tres" type="Theme" id=4]
[ext_resource path="res://Resources/UI/Test_btn_Empty.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Finish_Click"
length = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("Endbtn:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.1, 0.656289, 0.1, -0.656289, 1.02298, -0.1, -0.691851, 0.1, 0.691851 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Endbtn:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.1, 0.687737, 0.1, -0.687737, 1, -0.1, -0.645807, 0.1, 0.645807 ),
"times": PoolRealArray( 0, 0.2 )
}

[node name="Test_Over" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.105882, 0.164706, 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 160
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 871.0
margin_right = 1080.0
margin_bottom = 978.0
theme = ExtResource( 4 )
alignment = 1

[node name="Main_Header" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 401.0
margin_right = 678.0
margin_bottom = 107.0
text = "Hello"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1138.0
margin_right = 1080.0
margin_bottom = 1408.0
theme = ExtResource( 3 )
custom_constants/separation = 0
alignment = 1

[node name="Time_Spend" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 180.0
margin_right = 540.0

[node name="Percentage" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 540.0
margin_right = 900.0

[node name="Endbtn" type="TextureButton" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -195.0
margin_top = -210.0
margin_right = 195.0
margin_bottom = -120.0
rect_scale = Vector2( 1.02298, 1 )
rect_pivot_offset = Vector2( 195, 45 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="EndLabel" type="Label" parent="Endbtn"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
text = "Finish"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Finish_Click = SubResource( 1 )

[connection signal="button_up" from="Endbtn" to="." method="_on_btn_up"]
